# AI-deploy

./: .gitignore  CMakeLists.txt  README.md  eval.cpp  test.cpp
DETECTION/OpenCV/: cvDarknet.cpp  cvDarknet.h
Darknet/: CMakeLists.txt  yolo_class.hpp
Darknet/another/: main.cpp  yolo_v2_class.hpp
DeepSORT/: CMakeLists.txt  README.md  SORT.py  main.cpp
DeepSORT/CNNs/: ByTensorFlow.cpp  ByTensorFlow.h  ReID.h
DeepSORT/KalmanFilter/: CMakeLists.txt  tracker.cpp
KCF/: CMakeLists.txt  TrackTest4.cpp  recttools.hpp  runtracker.cpp
LibTorch/: Darknet.cpp  Darknet.h
Megengine/: yolox.cpp
NCNN/: CMakeLists.txt  Ncnn_class-old.cpp  build.txt
NCNN/silu-plugin/: add-custom-layer.zh.md
NCNN/silu-plugin/src/: silu.cpp  silu.h  test_silu.cpp
NCNN/silu-plugin/src/vulkan/: silu_vulkan.cpp  silu_vulkan.h
NCNN/silu-plugin/src/vulkan/shader/: silu.comp  silu_pack4.comp  silu_pack8.comp
NCNN/tools/: darknet2ncnn-silu.cpp  darknet2ncnn.cpp  demo.cpp  ncnnoptimizer.cpp
OpenVINO/: CMakeLists.txt  OpenVino_class.hpp
TensorRt/NetFrame/models/: yolov5.cpp
TorchScpt/: TorchScpt_class.cpp  TorchScpt_class.h
